--- a/src/assets/css/basic.css
+++ b/src/assets/css/basic.css
@@ -15,6 +15,7 @@ body {
         background-color: hsl(0, 0%, 95%);
         font-family: 'Varela Round', sans-serif;
         text-align: center;
+        /* align-items: center; */
 }
 
 
