update result to return fraction

--- a/src/assets/css/basic.css
+++ b/src/assets/css/basic.css
@@ -56,3 +56,8 @@ button {
 button:hover {
         background-color: #3e8e41;
 }
+
+.result {
+        direction: ltr;
+        font-size: large;
+}
