--- a/src/assets/css/basic.css
+++ b/src/assets/css/basic.css
@@ -39,3 +39,9 @@ button:hover {
         direction: ltr;
         font-size: large;
 }
+
+* {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+}
