--- a/src/assets/css/basic.css
+++ b/src/assets/css/basic.css
@@ -1,47 +1,111 @@
-.link {
-        text-decoration: none;
+@import url('https://fonts.googleapis.com/css2?family=Varela+Round&display=swap');
+
+body,
+html {
+  background-color: hsl(0, 0%, 95%);
+  font-family: 'Varela Round', sans-serif;
+  text-align: center;
+  margin: 0;
+  padding: 0;
+  font-size: 16px;
+  box-sizing: border-box;
+  overflow-x: hidden;
 }
 
-body {
-        background-color: hsl(0, 0%, 95%);
-        font-family: 'Varela Round', sans-serif;
-        text-align: center;
+h1 {
+  font-size: 25px;
+}
+
+h2 {
+  font-size: 16px;
+}
+
+h3 {
+  font-size: 10px;
+}
+
+p {
+  font-size: 1em;
+}
+
+.card-device button {
+  font-size: 9px;
+}
+
+.MuiTypography-root {
+  font-size: 12px;
+}
+
+.div-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  gap: 10px;
+}
+
+.link {
+  text-decoration: none;
 }
 
 .div1 {
-        white-space: pre-wrap;
+  white-space: pre-wrap;
 }
 
 input {
-        border: 1px solid gray;
-        padding: 10px;
-        border-radius: 5px;
+  border: 1px solid gray;
+  padding: 10px;
+  border-radius: 5px;
 }
 
 datalist {
-        margin-top: 10px;
+  margin-top: 10px;
 }
 
 button {
-        background-color: #4CAF50;
-        border: none;
-        color: white;
-        padding: 12px 20px;
-        border-radius: 5px;
-        cursor: pointer;
+  background-color: #4caf50;
+  border: none;
+  color: white;
+  padding: 12px 20px;
+  border-radius: 5px;
+  cursor: pointer;
 }
 
 button:hover {
-        background-color: #3e8e41;
+  background-color: #3e8e41;
 }
 
 .result {
-        direction: ltr;
-        font-size: large;
+  direction: ltr;
+  font-size: large;
 }
 
-* {
-        margin: 0;
-        padding: 0;
-        box-sizing: border-box;
+@media (min-width: 600px) {
+  h1 {
+    font-size: 2em;
+  }
+  h2 {
+    font-size: 1.3em;
+  }
+  h3 {
+    font-size: 14px;
+  }
+  p {
+    font-size: 1.1em;
+  }
+  .MuiTypography-root {
+    font-size: 20px;
+  }
+  .card-device button {
+    font-size: 14px;
+  }
+  .card-device .MuiCard-root {
+    width: 300px;
+  }
+  .div-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+  }
 }
