--- a/src/assets/css/Welcome.css
+++ b/src/assets/css/Welcome.css
@@ -1,4 +1,13 @@
-.welcome {
-        text-align: center;
-        margin-top: 4rem;
+.welcome img {
+  margin: 0 auto;
+  width: 95vw;
+  height: 300px;
+  border-radius: 30px;
+}
+
+@media (min-width: 600px) {
+  .welcome img {
+    width: 700px;
+    height: 400px;
+  }
 }
