Add style for selcet element

--- a/src/assets/css/basic.css
+++ b/src/assets/css/basic.css
@@ -62,6 +62,14 @@ datalist {
   margin-top: 10px;
 }
 
+select {
+  background-color: white;
+  color: black;
+  border: thin solid black;
+  border-radius: 5px;
+  padding: 10px;
+}
+
 button {
   background-color: #4caf50;
   border: none;
