--- a/src/assets/css/FormFrame.css
+++ b/src/assets/css/FormFrame.css
@@ -7,7 +7,10 @@
 
 .form-frame-container {
   display: flex;
+  align-content: center;
+  flex-wrap: wrap;
+  height: 70vh;
+  width: 100%;
   justify-content: center;
   align-items: center;
-  height: 70vh;
 }
