--- a/src/assets/css/basic.css
+++ b/src/assets/css/basic.css
@@ -48,18 +48,15 @@ p {
   text-decoration: none;
 }
 
-.div1 {
-  white-space: pre-wrap;
+label {
+  display: flex;
+  flex-direction: column;
+  margin: 10px;
 }
 
-input {
-  border: 1px solid gray;
-  padding: 10px;
-  border-radius: 5px;
-}
-
-datalist {
-  margin-top: 10px;
+#productAmount,
+#productType {
+  text-align: center;
 }
 
 select {
@@ -86,6 +83,16 @@ button:hover {
 .result {
   direction: ltr;
   font-size: large;
+  white-space: pre-wrap;
+}
+
+.div-result {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  flex-wrap: wrap;
+  margin: 10px;
 }
 
 @media (min-width: 600px) {
@@ -115,5 +122,21 @@ button:hover {
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
+  }
+  .div-result {
+    width: 35rem;
+    margin: 20px;
+  }
+  .div-result-CookedFoodsGB {
+    margin: 20px;
+  }
+  input {
+    border: 1px solid gray;
+    padding: 10px;
+    border-radius: 5px;
+  }
+  label .css-qbdosj-Input,
+  label .css-19bb58m {
+    grid-area: 1/-10/2/10;
   }
 }
